--- a/css-layout-classes/styles.css
+++ b/css-layout-classes/styles.css
@@ -3,18 +3,29 @@ body {
 }
 
 .main-container {
-  width: 800px; /* making it align */
+  max-width: 800px;
   margin: 0 auto;
   padding: 5px;
 }
 
 .row {
-  display: flex; /* Flow Horizontally */
+  display: flex;
   justify-content: center;
+  margin-bottom: 20px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
-.column {
-  width: 800px;
+.column-1-3 {
+  width: 35%;
+}
+
+.column-2-3 {
+  width: 70%;
+}
+
+.column-1-4 {
+  width: 25%;
 }
 
 .content {
