--- a/css-three-column-layout/styles.css
+++ b/css-three-column-layout/styles.css
@@ -18,8 +18,8 @@ body {
   height: 100px;
   background-color: white;
   border-radius: 100px;
-  margin: 0 100px;
   position: relative;
+  margin: 0 auto;
 }
 
 .custom-text {
