--- a/typescript-light-bulb/style.css
+++ b/typescript-light-bulb/style.css
@@ -1,5 +1,12 @@
 body {
   height: 100vh;
+  width: 100%;
+  margin: 0;
+}
+
+.container {
+  height: 100vh;
+  width: 100%;
   margin: 0;
   display: flex;
   justify-content: center;
@@ -7,11 +14,21 @@ body {
 }
 
 .light {
+  height: 100%;
+  width: 100%;
   background-color: #f7f5e2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .dark {
+  height: 100%;
+  width: 100%;
   background-color: rgb(19, 19, 19);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .bulb {
