--- a/typescript-light-bulb/style.css
+++ b/typescript-light-bulb/style.css
@@ -1,13 +1,10 @@
 body {
-  height: 100vh;
-  width: 100%;
-  margin: 0;
+  margin: 0 auto;
 }
 
 .container {
   height: 100vh;
   width: 100%;
-  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
