--- a/typescript-typing-tutor/style.css
+++ b/typescript-typing-tutor/style.css
@@ -15,6 +15,12 @@ body {
   text-underline-offset: 0.5em;
 }
 
+.accuracy {
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+}
+
 .correct {
   color: green;
 }
